<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountResult">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:text="@string/results"
            android:textColor="@color/pink"
            android:textSize="36dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/backblue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/forMeters"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginStart="127dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/backforspinner"
            android:paddingTop="8dp"
            android:text="@string/metres"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forRes"
            android:layout_width="161dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="133dp"
            android:background="@drawable/backforspinner"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reg"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/button_background"
            android:onClick="ToStart"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:textSize="24dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>